# linux_library_nx-gst-video-player

./: .gitignore  AUTHORS  CNX_Discover.cpp  CNX_Discover.h  CNX_FileList.h  CNX_MoviePlayer.cpp  CNX_MoviePlayer.h  CNX_Util.h  Makefile  Makefile.in  NX_MediaInfo.h  NxGstVideoPlayer.pro  PlayerVideoFrame.cpp  README  README.md  aclocal.m4  arm-poky-linux-gnueabi-libtool  config.h  config.h.in  config.status  configure  configure.ac
NxGstVideoPlayer/: CNX_Discover.cpp  CNX_Discover.h  CNX_GstMoviePlayer.cpp  CNX_GstMoviePlayer.h  NxGstVideoPlayer.pro  PlayerVideoFrame.cpp  PlayerVideoFrame.h
Package/: NxGstVideoPlayer.desktop
apps/: apps.pro
apps/NxGstVideoPlayer/: CNX_DrmInfo.cpp  CNX_DrmInfo.h  CNX_FileList.h  CNX_GstMoviePlayer.cpp  CNX_GstMoviePlayer.h  MainFrame.cpp  MainFrame.h  MainFrame.ui  NxEvent.h  NxGstVideoPlayer.pro  PlayerVideoFrame.cpp  PlayerVideoFrame.h  PlayerVideoFrame.ui  main.cpp
apps/NxGstVideoPlayer/media/: CNX_Base.h  CNX_MediaScanner.cpp  CNX_UeventManager.cpp  MediaScanner.cpp  MediaScanner.h
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
include/: NX_GstTypes.h
libnxgstmovieplayer/: GstDiscover.c  GstDiscover.h  Makefile  NX_GstMovie.h  NX_GstMoviePlay.cpp  NX_GstMoviePlay.h
src/: Makefile  Makefile.am  Makefile.in  NX_GstDiscover.c  NX_GstDiscover.h  NX_GstIface.h  NX_GstLog.c  NX_GstLog.h  NX_GstMediaInfo.cpp  NX_GstMediaInfo.h  NX_GstMoviePlay.cpp  NX_GstThumbnail.c  NX_GstThumbnail.h  NX_OMXSemaphore.c  NX_OMXSemaphore.h  NX_StreamParser.c  NX_TSProgram.c  NX_TypeFind.c  NX_TypeFind.h  libnxgstvplayer.la  libnxgstvplayer_la-NX_GstDiscover.lo  libnxgstvplayer_la-NX_GstLog.lo  libnxgstvplayer_la-NX_GstMediaInfo.lo  libnxgstvplayer_la-NX_GstMoviePlay.lo  libnxgstvplayer_la-NX_GstThumbnail.lo  libnxgstvplayer_la-NX_OMXSemaphore.lo  libnxgstvplayer_la-NX_TSProgram.lo  libnxgstvplayer_la-NX_TypeFind.lo
src/.deps/: libnxgstvplayer_la-NX_GstDiscover.Plo  libnxgstvplayer_la-NX_GstLog.Plo  libnxgstvplayer_la-NX_GstMediaInfo.Plo  libnxgstvplayer_la-NX_GstMoviePlay.Plo  libnxgstvplayer_la-NX_GstThumbnail.Plo  libnxgstvplayer_la-NX_OMXSemaphore.Plo  libnxgstvplayer_la-NX_TSProgram.Plo  libnxgstvplayer_la-NX_TypeFind.Plo
src/.libs/: libnxgstvplayer.la  libnxgstvplayer.lai  libnxgstvplayer.so.0  libnxgstvplayer.so.0.9.0
tools/scripts/: make_package.sh
